<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bjjskillstracker.MainScreen"
    tools:layout_editor_absoluteY="0dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/button_PositionControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/contentDesc_PositionalControl"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/button_Transitions"
                app:layout_constraintBottom_toTopOf="@id/button_Escapes"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin_half"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_PositionControl"
                android:text="@string/position_control"
                app:layout_constraintTop_toBottomOf="@id/button_PositionControl"
                app:layout_constraintLeft_toLeftOf="@id/button_PositionControl"
                app:layout_constraintRight_toRightOf="@id/button_PositionControl"
                />

            <ImageView
                android:id="@+id/button_Transitions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:contentDescription="@string/contentDesc_Transitions"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/button_PositionControl"
                app:layout_constraintBottom_toTopOf="@id/button_ArmLocks"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin_half"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/text_Transitions"
                android:layout_height="wrap_content"
                android:text="@string/transitions"
                app:layout_constraintRight_toRightOf="@id/button_Transitions"
                app:layout_constraintLeft_toLeftOf="@id/button_Transitions"
                app:layout_constraintTop_toBottomOf="@id/button_Transitions"
                />

            <ImageView
                android:id="@+id/button_Escapes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/contentDesc_Escapes"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/button_ArmLocks"
                app:layout_constraintTop_toBottomOf="@id/button_PositionControl"
                app:layout_constraintBottom_toTopOf="@id/button_Chokes"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/escapes"
                android:id="@+id/text_Escapes"
                app:layout_constraintTop_toBottomOf="@id/button_Escapes"
                app:layout_constraintLeft_toLeftOf="@id/button_Escapes"
                app:layout_constraintRight_toRightOf="@id/button_Escapes"
                />

            <ImageView
                android:id="@+id/button_ArmLocks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:contentDescription="@string/contentDesc_ArmLocks"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@id/button_Transitions"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/button_Escapes"
                app:layout_constraintBottom_toTopOf="@id/button_LegLocks"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/text_ArmLocks"
                android:layout_height="wrap_content"
                android:text="@string/armlocks"
                app:layout_constraintRight_toRightOf="@id/button_ArmLocks"
                app:layout_constraintLeft_toLeftOf="@id/button_ArmLocks"
                app:layout_constraintTop_toBottomOf="@id/button_ArmLocks"
                />


            <ImageView
                android:id="@+id/button_Chokes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/contentDesc_Chokes"
                app:layout_constraintBottom_toTopOf="@id/button_About"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/button_LegLocks"
                app:layout_constraintTop_toBottomOf="@id/button_Escapes"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chokes"
                android:id="@+id/text_Chokes"
                app:layout_constraintTop_toBottomOf="@id/button_Chokes"
                app:layout_constraintLeft_toLeftOf="@id/button_Chokes"
                app:layout_constraintRight_toRightOf="@id/button_Chokes"
                />

            <ImageView
                android:id="@+id/button_LegLocks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:contentDescription="@string/contentDesc_LegLocks"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@id/button_ArmLocks"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/button_Chokes"
                app:layout_constraintBottom_toTopOf="@id/button_Settings"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/text_LegLocks"
                android:layout_height="wrap_content"
                android:text="@string/leglocks"
                app:layout_constraintRight_toRightOf="@id/button_LegLocks"
                app:layout_constraintLeft_toLeftOf="@id/button_LegLocks"
                app:layout_constraintTop_toBottomOf="@id/button_LegLocks"
                />

            <ImageView
                android:id="@+id/button_About"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/contentDesc_About"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/button_Settings"
                app:layout_constraintTop_toBottomOf="@id/button_Chokes"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:id="@+id/text_About"
                app:layout_constraintTop_toBottomOf="@id/button_About"
                app:layout_constraintLeft_toLeftOf="@id/button_About"
                app:layout_constraintRight_toRightOf="@id/button_About"
                />

            <ImageView
                android:id="@+id/button_Settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:contentDescription="@string/contentDesc_Settings"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@id/button_LegLocks"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/button_About"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/text_Settings"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                app:layout_constraintRight_toRightOf="@id/button_Settings"
                app:layout_constraintLeft_toLeftOf="@id/button_Settings"
                app:layout_constraintTop_toBottomOf="@id/button_Settings"
                />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
